# zed

./: .gitignore  Cargo.toml
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json  vim.json
assets/settings/: default.json
crates/feature_flags/src/: flags.rs
crates/fs/: Cargo.toml
crates/fs/src/: fs.rs
crates/gpui/: Cargo.toml
crates/gpui/examples/: webview.rs
crates/gpui/src/: interactive.rs  scene.rs  window.rs
crates/gpui/src/elements/: div.rs  img.rs  mod.rs  webview.rs
crates/gpui_macos/src/: metal_renderer.rs  window.rs
crates/gpui_web/: Cargo.toml
crates/gpui_web/examples/clipboard/: Cargo.toml  (+2 more)
crates/gpui_web/src/: events.rs  platform.rs
crates/gpui_wgpu/src/: wgpu_renderer.rs
crates/gpui_windows/src/: direct_manipulation.rs  events.rs  window.rs
crates/image_viewer/src/: image_viewer.rs
crates/languages/src/: python.rs
crates/pdf_viewer/: Cargo.toml  build.rs
crates/pdf_viewer/src/: pdf_viewer.rs
crates/project/: Cargo.toml
crates/project/src/: environment.rs  pdf_store.rs  project.rs  toolchain_store.rs
crates/proto/proto/: zed.proto
crates/proto/src/: proto.rs
crates/remote/src/: remote.rs
crates/remote_server/: Cargo.toml
crates/remote_server/src/: headless_project.rs
crates/repl/: Cargo.toml
crates/repl/src/: repl_sessions_ui.rs  repl_store.rs  session.rs
crates/settings_content/src/: settings_content.rs
crates/workspace/src/: pane.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
crates/zed_actions/src/: lib.rs
nix/: build.nix
nix/modules/: devshells.nix
(+13 files in other folders)
